- fixed image sizing in MobileLightBox - fixed scroll on overview popup - adjusted spacing

--- a/src/popups/mobileAccommodationOverviewPopup/MobileAccommodationOverviewPopup.scss
+++ b/src/popups/mobileAccommodationOverviewPopup/MobileAccommodationOverviewPopup.scss
@@ -5,6 +5,7 @@
 	min-width: 200px;
 	background-color: #ffffff;
 	border-radius: 20px;
+	height: 100%;
 
 	.popupHeader {
 		display: flex;
@@ -60,13 +61,13 @@
 		width: auto;
 		max-width: 368px;
 		height: auto;
-		max-height: 200px;
+		max-height: 300px;
 	}
 
 	.expandFloorPlanDiv {
 		display: flex;
 		justify-content: flex-end;
-		margin: 30px auto 20px;
+		margin: 30px auto 100px;
 		& > * {
 			padding-left: 18px;
 			cursor: pointer;
